# voter-weight-addin-deposits

./: Anchor.toml  README.md
programs/voter-weight-addin-deposits/: Cargo.toml
programs/voter-weight-addin-deposits/src/: account.rs  context.rs  error.rs  lib.rs
programs/voter-weight-addin-deposits/tests/: test_basic.rs
programs/voter-weight-addin-deposits/tests/program_test/: addin.rs  governance.rs  mod.rs  solana.rs  utils.rs
tests/: voter-weight-addin-deposits.ts
